# dino

./: CMakeLists.txt  Cactus.cpp  Cactus.hpp  Camera.cpp  Camera.hpp  Coin.cpp  Coin.hpp  Entity.cpp  Entity.hpp  InfiniteMode.cpp  InfiniteMode.hpp  Level.cpp  Level.hpp  Missile.cpp  Missile.hpp  Player.cpp  Player.hpp  Pterodactyl.cpp  Pterodactyl.hpp  StandardMode.cpp  StandardMode.hpp  config.h  globals.hpp  main.cpp
Menu/: CharacterMenu.cpp  CharacterMenu.hpp  LevelMenu.cpp  LevelMenu.hpp  Menu.cpp  Menu.hpp  Modal.cpp  Modal.hpp  Rating.cpp  Rating.hpp  TextField.cpp  TextField.hpp
